--- a/Unsolved/config/config.json
+++ b/Unsolved/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "exampledb",
+    "password": "Florida89!",
+    "database": "drinks_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "Florida89!",
     "database": "testdb",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "Drinks_DB_URL",
     "dialect": "mysql"
   }
 }
