--- a/Unsolved/config/config.json
+++ b/Unsolved/config/config.json
@@ -9,13 +9,13 @@
   "test": {
     "username": "root",
     "password": "Florida89!",
-    "database": "testdb",
+    "database": "drinks_db",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
   },
   "production": {
-    "use_env_variable": "Drinks_DB_URL",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
