--- a/Unsolved/config/config.json
+++ b/Unsolved/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "root",
-    "password": "",
+    "password": "Florida89!",
     "database": "drinks_db",
     "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "",
+    "password": "Florida89!",
     "database": "drinks_db",
     "host": "localhost",
     "dialect": "mysql",
