Updated Sequelize configuration for production

--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,13 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL"
+    "use_env_variable": "CLEARDB_DATABASE_URL",
+    "dialect": "mysql",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
