--- a/config/config.json
+++ b/config/config.json
@@ -15,13 +15,10 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "CLEARDB_DATABASE_URL",
-    "dialect": "mysql",
-    "dialectOptions": {
-      "ssl": {
-        "require": true,
-        "rejectUnauthorized": false
-      }
-    }
+    "username": "b3d997f1e473fc",
+    "password": "efdf387e",
+    "database": "heroku_435ae374e99a5f6",
+    "host": "us-cdbr-east-06.cleardb.net",
+    "dialect": "mysql"
   }
 }
